amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'anotherRandomText'
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql#/declares/shape/InputType/and/shape/InputType_1/property/property/anotherRandomText
  Property: 
  Range: [(23,4)-(23,29)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'anotherRandomText'
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql#/declares/shape/InputType/and/shape/InputType_1/property/property/anotherRandomText_2
  Property: 
  Range: [(24,4)-(24,29)]
  Location: 
